<resources>
    <string name="app_name">StatefulBread</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="stateful_bread">Stateful Bread</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="bottom">Bottom</string>
    <string name="favorites">Favorites</string>
    <string name="logout">LogOut</string>
    <string name="day_night">Day/Night</string>
    <string name="night_mode">Night Mode</string>
    <string name="categories">Categories</string>
</resources>